--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<body></body>
 funct popupku() {
   var body = document.querySelector("body");      
   var pWm = document.createElement("a");
